# MFUEA

./: Cargo.toml  README.md
example/: example.txt  modflare_new_slice.txt
src/: eacrmf.rs  eacrossmf.rs  eamutmf.rs  energymf.rs  errors.rs  fplotd.rs  functions.rs  iomf.rs  main.rs  scaledatamf.rs
